Added table action buttons

--- a/WPFDeskManager.csproj
+++ b/WPFDeskManager.csproj
@@ -8,12 +8,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Assets\DeleteButton.png" />
+    <None Remove="Assets\EditButton.png" />
     <None Remove="Assets\ShowButton.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Assets\DeleteButton.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Assets\EditButton.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Assets\ShowButton.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
 
